Fixed info image margin on mobile.

--- a/waves/css/style.css
+++ b/waves/css/style.css
@@ -464,11 +464,13 @@ body {
     width: 30rem;
     border-radius: 50%;
     transition: all .2s;
-    box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.1); }
+    box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.1);
+    margin-top: 5rem; }
     @media only screen and (max-width: 55em) {
       .info__photo {
         height: 15rem;
-        width: 15rem; } }
+        width: 15rem;
+        margin-top: 0; } }
     .info__photo:hover {
       transform: scale(1.05);
       box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2); }
