--- a/waves/sass/pages/_index.scss
+++ b/waves/sass/pages/_index.scss
@@ -33,10 +33,12 @@
         border-radius: 50%;
         transition: all .2s;
         box-shadow: 0 .5rem .5rem rgba($color-black, .1);
+        margin-top: 5rem;
 
         @include res(tablet) {
             height: 15rem;
             width: 15rem;
+            margin-top: 0;
         }
 
         &:hover {
